resume: update tech exp

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -1,4 +1,3 @@
-%% start of file `template.tex'.
 %% Copyright 2006-2010 Xavier Danaux (xdanaux@gmail.com).
 %% Copyright 2010 Mark Liu (markwayneliu@gmail.com).
 %
@@ -26,8 +25,8 @@
 % personal data
 \firstname{Brian}
 \familyname{Martin}
-%\address{(omitted for web)}{(omitted for web)}    % optional, remove the line if not wanted
-%\mobile{(omitted for web)}                    % optional, remove the line if not wanted
+\address{(omitted for web)}{(omitted for web)}    % optional, remove the line if not wanted
+\mobile{(omitted for web)}                    % optional, remove the line if not wanted
 \email{brianmartin@gmail.com}                      % optional, remove the line if not wanted
 \homepage{http://rob0t.com}                % optional, remove the line if not wanted
 %\extrainfo{http://rob0t.com} % optional, remove the line if not wanted
@@ -79,10 +78,11 @@ The behavior was programmed in Lua, the modelling was done in Milkshape.  They i
 
 \section{Technical Experience}
 \subsection{Proficient With}
-\cvline{languages}{Python, Clojure, Java, R, Mathematica}
-\cvline{technologies}{Linux (Arch, Debian/Ubuntu), OSX, Django, \LaTeX{}, Bash, Git, Vim}
+\cvline{languages}{Python, Clojure (with emphasis on distributed and concurrent applications), Java, Mathematica}
+\cvline{technologies}{Linux (Arch, Debian/Ubuntu, Rocks), Git, Vim, \LaTeX{}, OSX, Django, RabbitMQ, ZeroMQ}
 \subsection{Have Experience With}
-\cvline{technologies}{Apache, Lighttpd, JQuery, EC2, MySQL}
+\cvline{languages}{C/C++, R, Matlab, Lua}
+\cvline{technologies}{SQL, Apache, Lighttpd, JQuery, EC2, Weka, Hadoop/Mahout}
 
 \section{Coursework}
 \subsection{Computer Science}
@@ -90,4 +90,9 @@ The behavior was programmed in Lua, the modelling was done in Milkshape.  They i
 \cvline{Graduate-level}{Graphical Models, Reinforcement Learning, Applied Information Theory, Foundations of Natural Language Processing}
 \subsection{Math}
 \cvline{}{Advanced Topics in Continuous Applied Math: Dynamical Systems and Chaos, Statistics, Multivariate Calculus, Graph Theory, Linear Algebra}
+
+\section{Achievements}
+\cvline{}{Class President, Illinois Mathematics and Science Academy}
+\cvline{}{Eagle Scout, Boy Scouts of America}
+\cvline{}{Most Ambitious Freshman, Dixon High School Newspaper}
 \end{document}
